# ai-financial-assistant

./: .gitignore  README.md  package.json
ai_api/: .env.example  README.md  pyproject.toml
ai_api/src/: main.py
ai_api/src/agents/: react_agent.py
ai_api/src/api/: chat.py
ai_api/src/core/: config.py
ai_api/src/services/: chat_service.py  google_sheets_service.py
ai_api/src/tools/: search.py  sheets.py
