[tool.poetry]
name = "ai-financial-assistant-api"
version = "0.1.0"
description = "API for AI Financial Assistant"
authors = ["Luis Otavio"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.7"
uvicorn = "^0.34.0"
pydantic = "^2.10.6"
pydantic-settings = "^2.1.0"
langchain = "0.3.15"
langchain-openai = "0.3.2"
langgraph = "0.2.67"
langchain-community = "0.3.15"
google-search-results = "^2.4.2"
azure-identity = "^1.15.0"
openai = "^1.12.0"
langchain-core = "0.3.31"
google-auth = "^2.38.0"
google-auth-oauthlib = "^1.2.1"
google-auth-httplib2 = "^0.2.0"
google-api-python-client = "^2.159.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
httpx = "^0.28.1"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"